--- a/nodejs/krishna/parth/package.json
+++ b/nodejs/krishna/parth/package.json
@@ -2,21 +2,35 @@
   "name": "parth",
   "version": "0.0.0",
   "private": true,
+  "main": "./bin/www",
   "scripts": {
-    "start": "node ./bin/www"
+    "test": "mocha  --require ./mocha.env.js",
+    "start": "nodemon ./bin/www --port 7070 --ip 127.0.0.1"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
     "caching": "^0.1.4",
+    "connect": "^3.6.6",
     "cookie-parser": "^1.4.3",
     "debug": "^2.6.9",
+    "ejs": "^2.6.1",
     "error-handling": "^1.0.0",
     "express": "^4.16.3",
     "forever-monitor": "^1.7.1",
     "http-errors": "^1.6.3",
     "jade": "^1.11.0",
+    "mime": "^2.3.1",
     "morgan": "^1.9.0",
     "mysql": "^2.15.0",
-    "request": "^2.87.0"
+    "qs": "^6.5.2",
+    "realtime": "0.0.1",
+    "request": "^2.87.0",
+    "send": "^0.16.2",
+    "socket.io": "^2.1.1",
+    "socket.io-client": "^2.1.1",
+    "websocket": "^1.0.26"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.3"
   }
 }
