--- a/routing/package.json
+++ b/routing/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^4.4.7",
     "@angular/platform-browser-dynamic": "^4.4.7",
     "@angular/router": "^4.4.7",
+    "cli-update": "^3.2.5",
     "core-js": "^2.5.7",
     "hoek": "^5.0.4",
     "npm-check-updates": "^2.14.2",
